2001-02-13  Paolo Maggi  <maggi@athena.polito.it>

	* file.c (gedit_file_open): now uses g_return_val_if_fail
	instead of g_assert
	(gedit_file_open_ok_sel): now uses g_return_if_fail
	instead of g_assert

	* document.c (gedit_document_load):  now uses
	g_return_val_if_fail instead of g_assert

2001-02-12  Paolo Maggi  <maggi@athena.polito.it>

	* file.c (gedit_file_save_as_ok_sel): remove g_assert
	that crashed gedit when exiting and saving a file.
	(file_save_document): before saving a document raise
	one of its views.
	
	* document.c (remove_child_cb): before removing a mdi child
	raise a view if the document is changed.	
	
2001-02-11  Chema Celorio  <chema@celorio.com>

	* file.c (gedit_file_save_as_ok_sel): remove g_asserts
	that where crashing then exiting gedit and saving a file.

	* view.c (gedit_view_set_tab_size): implement
	(gedit_view_init): call _set_tab_size after creating the gtk_text
	widget.

	* window.c (gedit_window_refresh_all): call set_tab_size

	* prefs.c (gedit_prefs_load_settings): tab size. Save load and
	add to struct.

	* dialogs/dialog-prefs.c (apply_cb): support for tab size

	* window.c (gedit_window_refresh_all): add a tab size changed parameter

	* file.c: remove message to translators

2001-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/dialog-uri.c (open_button_pressed):
	hide dlg before trying to load file from URI

2001-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* view.c (gedit_view_init): the same popup menu is attached
	to all the wiews

	* window.c (gedit_window_set_widgets_sensitivity_ro): fix

	* dialogs/dialog-uri.c (dialog_open_uri_get_dialog)(open_button_pressed):
	now uri history is not saved

2001-02-05  Paolo Maggi  <maggi@athena.polito.it>

	* file.c: new variable  save_all_flag, new enum GeditSaveAllFlagStates
	(save_all_continue): new function
	(gedit_file_save_as): now it saves the right file and the save as dialog is modal
	(gedit_file_save): active a document's view before saving the document